# TaskManager

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance_task.md  testing_qa.md
.github/workflows/: backend-ci.yml  ci.yml  frontend-ci.yml
FRONTEND/: package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
FRONTEND/src/: App.tsx
FRONTEND/src/components/bugs/: BugSheet.tsx  EditBugDialog.tsx  ReportBugDialog.tsx
FRONTEND/src/contexts/: AuthContext.tsx
FRONTEND/src/hooks/: use-bugs.ts  use-categories.ts  use-tasks.ts
FRONTEND/src/lib/: store.ts
FRONTEND/src/pages/: Bugs.tsx  Categories.tsx  Dashboard.tsx  Login.tsx  Register.tsx  Tasks.tsx
FRONTEND/src/test/: setup.ts  test-utils.tsx
backend/: .gitignore  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 657e78cc908f_add_status_column_to_bug_table.py  997a64ea1549_initial_schema.py  9ae5530549c3_remove_unused_bug_fields.py  e0944945f9aa_initial_schema.py
backend/src/: main.py
backend/src/controllers/: auth.py  bugs.py  categories.py  tasks.py  users.py
backend/src/core/: config.py
backend/src/models/: __init__.py  base.py  bug.py  category.py  task.py  user.py
backend/src/schemas/: bug.py  category.py  task.py  user.py
backend/src/services/: bug.py  category.py  task.py  user.py
backend/src/utils/: database.py  security.py
backend/tests/: conftest.py  test_auth.py  test_bugs.py  test_categories.py  test_relationships.py  test_services.py  test_tasks.py  test_users.py
(+25 files in other folders)
