[project]
name = "taskmanager"
version = "0.1.0"
description = "Add your description here"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "pytest>=8.1.1",
    "ruff>=0.15.16",
]

[tool.alembic]
script_location = "migrations"
prepend_sys_path = ["."]
version_path_separator = "os"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]


[tool.coverage.run]
concurrency = ["greenlet", "thread"]
